--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,7 +1,3 @@
-// body {
-//     font-family: 'Baloo 2', 'Poppins', sans-serif, cursive;
-// }
-
 $light-blue: #2791cf;
 $light-grey: #7E878c;
 $dark-grey: #3f3f3f;
@@ -34,6 +30,8 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0;
+    overflow: hidden;
+    /* Prevent scrolling on the body */
 }
 
 main {
@@ -41,6 +39,7 @@ main {
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    /* Prevent scrolling on the main container */
 
     header {
         background-color: $light-blue;
@@ -50,7 +49,6 @@ main {
 
         div.title {
             @include flexing(row, flex-start, center);
-
 
             h1 {
                 font-family: $font-heading;
@@ -72,6 +70,8 @@ main {
         background-color: $light-grey;
         padding: 20px;
         @include flexing(row, flex-start, stretch);
+        overflow: hidden;
+        /* Prevent scrolling on the container */
 
         div.users-window {
             width: 350px;
@@ -103,57 +103,31 @@ main {
         div.chat-big-window {
             flex: 1;
             @include flexing(column, flex-end, stretch);
+            overflow: hidden;
+            /* Prevent scrolling on the chat-big-window */
 
             div.chat-window {
                 flex: 1;
-                display: flex;
-                flex-direction: column;
                 width: 100%;
                 border-radius: 10px;
                 background-color: $dark-grey;
+                display: grid;
+                gap: 1rem;
+                grid-auto-flow: row;
+                overflow-x: auto;
+                padding: 1rem;
+                height: 100%;
 
-                div.chats {
-                    flex: 1;
-                    padding: 20px;
-                    overflow-y: auto;
-
-                    div.user-join {
-                        font-size: 0.9rem;
-                        color: $dark-grey;
-                        background: $white;
-                        border-radius: 50px;
-                        width: max-content;
-                        padding: 7px 20px;
-                        margin: 0 auto;
-                        margin-bottom: 15px;
-                    }
-
-                    div.message {
-                        color: $dark-grey;
-                        background-color: $white;
-                        padding: 5px 15px;
-                        max-width: 400px;
-                        margin-bottom: 15px;
-                        border-radius: 10px 50px 50px 10px;
-
-                        p {
-                            font-size: $fsize;
-                        }
-                    }
-
-                    div.outgoing {
-                        margin-left: auto;
-                        color: $white;
-                        background-color: $light-blue;
-                        border-radius: 50px 10px 10px 50px;
-                        text-align: right;
-                    }
+                img {
+                    width: 100%;
+                    height: auto;
+                    display: block;
                 }
             }
 
             div.user-input {
                 @include flexing(row, space-between, stretch);
-                padding: 20px;
+                padding: 20px 20px 0 20px;
 
                 input {
                     font-size: $fsize;
@@ -179,7 +153,6 @@ main {
                 }
             }
         }
-
     }
 }
 
@@ -187,11 +160,25 @@ footer {
     background-color: $dark-grey;
     color: $white;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: 14px;
-    padding: 10px 0;
-    /* Adjust padding as needed */
+    font-size: 8px;
+    padding: 4px 0;
+    text-align: center;
+
+    p {
+        margin: 2px 0;
+    }
+
+    a {
+        color: $light-blue;
+        text-decoration: none;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
 }
 
 @media screen and (max-width: 900px) {
@@ -216,15 +203,6 @@ footer {
                 box-shadow: 0 15px 20px -20px black;
                 padding-bottom: 0;
                 display: none;
-            }
-
-            div.chat-window {
-                div.chats {
-                    div.message {
-                        max-width: 300px;
-
-                    }
-                }
             }
         }
     }
