--- a/styles/index.scss
+++ b/styles/index.scss
@@ -27,9 +27,25 @@ $fsize: 16px;
     }
 }
 
+@keyframes fadeInFromTop {
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 /* Apply the fade-in animation to all elements */
 body, header, .container-large, .users-window, .chat-big-window, .container, footer {
     animation: fadeIn 1s ease-in-out;
+}
+
+/* Apply the fade-in-from-top animation to the users-window element */
+.users-window {
+    animation: fadeInFromTop 1s ease-in-out;
 }
 
 * {
